--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -27,7 +27,7 @@
             android:id="@+id/sliding_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"
+            android:gravity="bottom"
             sothree:umanoDragView="@+id/dragView"
             sothree:umanoOverlay="true"
             sothree:umanoPanelHeight="68dp"
@@ -44,7 +44,7 @@
                     android:id="@+id/swipyrefreshlayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="68dp"
+                    android:layout_marginBottom="68dp"
                     app:srl_direction="bottom">
 
                     <GridView
@@ -68,6 +68,23 @@
                 android:focusable="false"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="68dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/search_title"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:paddingRight="10dp"
+                        android:text="@string/filter_title"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -86,52 +103,24 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <TextView
-                                android:id="@+id/textViewCity"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="0.3"
-                                android:padding="8dp"
-                                android:text="@string/filter_city" />
-
                             <Spinner
                                 android:id="@+id/filter_city"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="0.7"
+                                android:layout_weight="1"
                                 android:padding="8dp" />
-
-                        </TableRow>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@android:color/darker_gray" />
-
-                        <TableRow
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:id="@+id/textViewTitle"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="0.3"
-                                android:padding="8dp"
-                                android:text="@string/filter_name" />
 
                             <EditText
                                 android:id="@+id/filter_name"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="0.7"
+                                android:layout_weight="1"
                                 android:background="@drawable/background_field"
                                 android:ems="10"
                                 android:inputType="textPersonName"
+                                android:hint="@string/filter_name"
                                 android:padding="8dp" />
 
                         </TableRow>
@@ -212,7 +201,7 @@
                             android:layout_height="64dp">
 
                             <CheckBox
-                                android:id="@+id/filter_vegetarianـfood"
+                                android:id="@+id/filter_vegetarian_food"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_vertical_margin"
@@ -234,6 +223,60 @@
                             android:layout_height="1dp"
                             android:background="@android:color/darker_gray" />
 
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="64dp">
+
+                            <CheckBox
+                                android:id="@+id/filter_takea_way"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_takea_way" />
+
+                            <CheckBox
+                                android:id="@+id/filter_third_wave_coffee"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_third_wave_coffee" />
+
+                        </TableRow>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@android:color/darker_gray" />
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="64dp">
+
+                            <CheckBox
+                                android:id="@+id/filter_gallery"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_gallery" />
+
+                            <CheckBox
+                                android:id="@+id/filter_tv"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_tv" />
+
+                        </TableRow>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@android:color/darker_gray" />
+
                         <Button
                             android:id="@+id/filter_button"
                             android:layout_width="match_parent"
@@ -244,23 +287,6 @@
                     </LinearLayout>
 
                 </ScrollView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="68dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/search_title"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:paddingRight="10dp"
-                        android:text="@string/filter_title"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
 
             </LinearLayout>
         </com.sothree.slidinguppanel.SlidingUpPanelLayout>
