--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -30,7 +30,7 @@
             android:gravity="bottom"
             sothree:umanoDragView="@+id/dragView"
             sothree:umanoOverlay="true"
-            sothree:umanoPanelHeight="68dp"
+            sothree:umanoPanelHeight="90dp"
             sothree:umanoParallaxOffset="100dp"
             sothree:umanoScrollableView="@+id/list"
             sothree:umanoShadowHeight="4dp">
@@ -44,7 +44,7 @@
                     android:id="@+id/swipyrefreshlayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="68dp"
+                    android:layout_marginBottom="100dp"
                     app:srl_direction="bottom">
 
                     <GridView
@@ -70,7 +70,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="68dp"
+                    android:background="@color/colorBrown100"
+                    android:layout_height="90dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -103,14 +104,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <Spinner
-                                android:id="@+id/filter_city"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="1"
-                                android:padding="8dp" />
-
                             <EditText
                                 android:id="@+id/filter_name"
                                 android:layout_width="0dp"
@@ -119,23 +112,20 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/background_field"
                                 android:ems="10"
-                                android:inputType="textPersonName"
                                 android:hint="@string/filter_name"
+                                android:padding="8dp" />
+
+                            <Spinner
+                                android:id="@+id/filter_city"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:gravity="left"
                                 android:padding="8dp" />
 
                         </TableRow>
 
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@android:color/darker_gray" />
-
-                        <CheckBox
-                            android:id="@+id/filter_recommended"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/activity_vertical_margin"
-                            android:text="@string/filter_recommended" />
 
                         <View
                             android:layout_width="match_parent"
@@ -147,20 +137,20 @@
                             android:layout_height="wrap_content">
 
                             <CheckBox
+                                android:id="@+id/filter_recommended"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_recommended" />
+
+                            <CheckBox
                                 android:id="@+id/filter_no_smoking"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_vertical_margin"
                                 android:layout_weight="1"
                                 android:text="@string/filter_no_smoking" />
-
-                            <CheckBox
-                                android:id="@+id/filter_family"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="@dimen/activity_vertical_margin"
-                                android:layout_weight="1"
-                                android:text="@string/filter_family" />
 
                         </TableRow>
 
@@ -198,7 +188,7 @@
 
                         <TableRow
                             android:layout_width="match_parent"
-                            android:layout_height="64dp">
+                            android:layout_height="wrap_content">
 
                             <CheckBox
                                 android:id="@+id/filter_vegetarian_food"
@@ -218,6 +208,26 @@
 
                         </TableRow>
 
+                        <!-- <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@android:color/darker_gray" />
+
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <CheckBox
+                                android:id="@+id/filter_family"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/activity_vertical_margin"
+                                android:layout_weight="1"
+                                android:text="@string/filter_family" />
+
+                        </TableRow>
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -225,7 +235,7 @@
 
                         <TableRow
                             android:layout_width="match_parent"
-                            android:layout_height="64dp">
+                            android:layout_height="wrap_content">
 
                             <CheckBox
                                 android:id="@+id/filter_takea_way"
@@ -252,7 +262,7 @@
 
                         <TableRow
                             android:layout_width="match_parent"
-                            android:layout_height="64dp">
+                            android:layout_height="wrap_content">
 
                             <CheckBox
                                 android:id="@+id/filter_gallery"
@@ -270,7 +280,7 @@
                                 android:layout_weight="1"
                                 android:text="@string/filter_tv" />
 
-                        </TableRow>
+                        </TableRow> -->
 
                         <View
                             android:layout_width="match_parent"
@@ -282,6 +292,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/activity_vertical_margin"
+                            android:background="@color/colorAccent"
+                            android:textColor="@color/white"
                             android:text="@string/filter_button" />
 
                     </LinearLayout>
