--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="backdrop_subtitle_padding">10dp</dimen>
 
+    <!-- Video page -->
+    <dimen name="video_player_height">250dp</dimen>
+
 </resources>
