--- a/app/src/main/res/layout/list_row_cafe.xml
+++ b/app/src/main/res/layout/list_row_cafe.xml
@@ -11,7 +11,7 @@
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="@dimen/list_image_height_2_columns"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
@@ -32,7 +32,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="bottom|right"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </LinearLayout>
