--- a/app/src/main/res/values-large-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-large-xxhdpi/dimens.xml
@@ -15,6 +15,10 @@
     <dimen name="main_grid_text_padding_left">5dp</dimen>
     <dimen name="main_grid_text_padding_right">5dp</dimen>
 
+    <!-- List image -->
+    <dimen name="list_image_height_1_columns">350dp</dimen>
+    <dimen name="list_image_height_2_columns">160dp</dimen>
+
     <!-- Video page -->
     <dimen name="video_player_height">400dp</dimen>
 
