--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,9 +21,10 @@
     <dimen name="main_grid_text_padding_right">5dp</dimen>
 
     <!-- List image -->
-    <dimen name="list_image_height_1_columns">200dp</dimen>
-    <dimen name="list_image_height_2_columns">100dp</dimen>
-
+    <dimen name="list_video_image_height">200dp</dimen>
+    <dimen name="list_cafe_image_height">100dp</dimen>
+    <dimen name="list_event_image_height">100dp</dimen>
+    <dimen name="list_event_image_width">140dp</dimen>
     <!-- Video page -->
     <dimen name="video_player_height">250dp</dimen>
 
