--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -15,13 +15,13 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <android.support.design.widget.FloatingActionButton
+        <!-- <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@android:drawable/ic_dialog_map" />
+            android:src="@android:drawable/ic_dialog_map" /> -->
 
         <com.sothree.slidinguppanel.SlidingUpPanelLayout
             android:id="@+id/sliding_layout"
@@ -30,7 +30,7 @@
             android:gravity="bottom"
             sothree:umanoDragView="@+id/dragView"
             sothree:umanoOverlay="true"
-            sothree:umanoPanelHeight="90dp"
+            sothree:umanoPanelHeight="68dp"
             sothree:umanoParallaxOffset="100dp"
             sothree:umanoScrollableView="@+id/list"
             sothree:umanoShadowHeight="4dp">
@@ -70,7 +70,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="68dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -79,9 +79,23 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/activity_vertical_margin"
+                        android:paddingRight="@dimen/activity_vertical_margin"
                         android:text="@string/filter_title"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
+
+                    <Button
+                        android:id="@+id/search_map"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorAccent"
+                        android:drawableLeft="@android:drawable/ic_dialog_map"
+                        android:gravity="center_vertical|right"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="@string/filter_map_list"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -292,8 +306,8 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="@dimen/activity_vertical_margin"
                             android:background="@color/colorAccent"
-                            android:textColor="@color/white"
-                            android:text="@string/filter_button" />
+                            android:text="@string/filter_button"
+                            android:textColor="@color/white" />
 
                     </LinearLayout>
 
