--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -6,8 +6,8 @@
     <dimen name="backdrop_subtitle_padding">10dp</dimen>
 
     <!-- List image -->
-    <dimen name="list_image_height_1_columns">200dp</dimen>
-    <dimen name="list_image_height_2_columns">100dp</dimen>
+    <dimen name="list_video_image_height">200dp</dimen>
+    <dimen name="list_cafe_image_height">100dp</dimen>
 
     <!-- Video page -->
     <dimen name="video_player_height">250dp</dimen>
