--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -11,5 +11,6 @@
 
     <!-- Video page -->
     <dimen name="video_player_height">250dp</dimen>
+    <dimen name="main_image_height">320dp</dimen>
 
 </resources>
