--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,7 +25,26 @@
     <dimen name="list_cafe_image_height">100dp</dimen>
     <dimen name="list_event_image_height">100dp</dimen>
     <dimen name="list_event_image_width">140dp</dimen>
-    <!-- Video page -->
+
+    <!-- Item pages -->
     <dimen name="video_player_height">250dp</dimen>
+    <dimen name="main_image_height">320dp</dimen>
+
+
+
+
+
+    <dimen name="max_width">400dp</dimen>
+    <dimen name="material_component_cards_left_and_right_padding">16dp</dimen>
+    <dimen name="material_component_cards_top_and_bottom_padding">16dp</dimen>
+    <dimen name="material_component_cards_padding_from_edge_of_screen_to_card">4dp</dimen>
+    <dimen name="material_component_cards_space_between_cards">4dp</dimen>
+    <dimen name="app_bar_elevation">4dp</dimen>
+    <dimen name="floating_action_button_elevation">4dp</dimen>
+    <integer name="grid_column_count">2</integer>
+    <dimen name="expanded_toolbar_height">80dp</dimen>
+    <dimen name="expanded_toolbar_title_margin_bottom">40dp</dimen>
+    <dimen name="material_layout_keylines_screen_edge_margin">24dp</dimen>
+    <dimen name="material_component_floating_action_button_margin">16dp</dimen>
 
 </resources>
