--- a/app/src/main/res/layout/list_horizontal_card.xml
+++ b/app/src/main/res/layout/list_horizontal_card.xml
@@ -48,6 +48,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/itemType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
         </LinearLayout>
 
 
