--- a/app/src/main/res/values-large-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-large-xxxhdpi/dimens.xml
@@ -15,6 +15,9 @@
     <dimen name="main_grid_text_padding_left">5dp</dimen>
     <dimen name="main_grid_text_padding_right">5dp</dimen>
 
+    <!-- Main page list -->
+    <dimen name="main_horizontal_list_height">270dp</dimen>
+
     <!-- List image -->
     <dimen name="list_video_image_height">350dp</dimen>
     <dimen name="list_cafe_image_height">160dp</dimen>
