--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -8,73 +8,88 @@
     android:orientation="vertical"
     tools:context="com.faragostaresh.cafeyab.AboutActivity">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white" >
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <LinearLayout
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/share_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_share_black_24dp" />
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="@color/white">
 
-            <WebView
-                android:id="@+id/playerWebView"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/video_player_height"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="0dp"
-                android:padding="@dimen/activity_vertical_margin" />
-
-            <TextView
-                android:id="@+id/viewTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lineSpacingExtra="12sp"
-                android:layout_gravity="right"
-                android:textSize="20sp"
-                android:padding="@dimen/activity_vertical_margin" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/summary"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:textColor="@color/textColor"
-                android:textSize="15sp" />
+                <WebView
+                    android:id="@+id/playerWebView"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/video_player_height"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="0dp"
+                    android:padding="@dimen/activity_vertical_margin" />
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:textColor="@color/textColor"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/viewTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/listTitle3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="@string/relatedVideos"
-                android:textColor="@color/colorAccent"
-                android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp" />
 
-            <ListView
-                android:id="@+id/videoRelatedlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp" />
 
+                <TextView
+                    android:id="@+id/relatedVideos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/relatedVideos"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="20sp" />
 
-        </LinearLayout>
-    </ScrollView>
+                <ListView
+                    android:id="@+id/videoRelatedlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </FrameLayout>
 </LinearLayout>
